--- a/Dashboard.html
+++ b/Dashboard.html
@@ -82,6 +82,8 @@
     </section>
 
     <script>
+        
+        const apiUrl = "https://backend-recent-1.onrender.com";
         document.addEventListener('DOMContentLoaded', async () => {
             const userId = new URLSearchParams(window.location.search).get('userId');
             if (!userId) {
@@ -90,7 +92,7 @@
             }
 
             try {
-                const response = await fetch(`http://localhost:3000/profiles/${userId}`, {
+                const response = await fetch(`${apiUrl}/profiles/${userId}`, {
                     method: 'GET',
                     credentials: 'include'
                 });
@@ -151,7 +153,7 @@
                 const link = document.querySelector(`.link[data-link-index="${linkIndex}"]`);
                 if (link) {
                     try {
-                        fetch('http://localhost:3000/update-link', {
+                        fetch(`${apiUrl}/update-link`, {
                             method: 'POST',
                             headers: {
                                 'Content-Type': 'application/json'
