--- a/login.html
+++ b/login.html
@@ -22,6 +22,7 @@
     </div>
 
     <script>
+        const apiUrl = "https://backend-recent-1.onrender.com";
         document.getElementById('loginForm').addEventListener('submit', async function (event) {
             event.preventDefault();
 
@@ -29,7 +30,7 @@
             const password = document.getElementById('password').value;
 
             try {
-                const response = await fetch('http://localhost:3000/login', {
+                const response = await fetch('${apiUrl}/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
