--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
             const password = document.getElementById('password').value;
 
             try {
-                const response = await fetch('${apiUrl}/login', {
+                const response = await fetch(`${apiUrl}/login`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
