--- a/Dashboard.html
+++ b/Dashboard.html
@@ -42,9 +42,61 @@
 
     <section class="main">
         <div class="link-box">
-            <!-- ... [link elements as provided in the original code] ... -->
+            <div class="link-img">
+                <a href="https://dir.indiamart.com/impcat/refrigerator.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=13&utm_term=consumerelectronics"
+                    class="link" data-link-index="0"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2023/10/351678416/BY/YT/AM/6981331/ss-undercounter-refrigerator-1000x1000.jpg"
+                        alt="link1"></a>
+            </div>
+            <div class="link-img">
+                <a href="https://dir.indiamart.com/impcat/air-coolers.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=19&utm_term=consumerelectronics"
+                    class="link" data-link-index="1"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2023/5/308270389/RJ/TN/PK/2665109/ice-cool-1000x1000.jpeg"
+                        alt="link"></a>
+            </div>
+            <div class="link-img">
+                <a href="https://dir.indiamart.com/impcat/samsung-split-air-conditioners.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=23&utm_term=consumerelectronics"
+                    class="link" data-link-index="2"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2024/2/394460666/OZ/XE/XF/44326447/samsung-1-0-ton-3-star-inverter-split-ac-1000x1000.jpg"
+                        alt="link"></a>
+            </div>
+            <div class="link-img">
+                <a href="https://dir.indiamart.com/impcat/modular-kitchens.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=25&utm_term=architecture&interiors"
+                    class="link" data-link-index="3"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2024/3/400273942/BS/XX/VF/9973247/laminated-modular-kitchen-1000x1000.png"
+                        alt="link"></a>
+            </div>
+        </div>
+
+
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://dir.indiamart.com/impcat/bajaj-table-fan.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=3&utm_term=consumerelectronics"
+                    class="link" data-link-index="4"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2023/7/328132425/GT/VN/XS/181066436/gg-500x500.png"
+                        alt="link1"></a>
+            </div>
+            <div class="link-img">
+                <a href="https://dir.indiamart.com/impcat/wireless-earphone.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=4&utm_term=consumerelectronics"
+                    class="link" data-link-index="5"><img
+                        src="https://5.imimg.com/data5/CG/DL/ZW/SELLER-3629868/jogger-y14-magnetic-fold-able-wireless-neckband-bluetooth-headphone-500x500.jpg"
+                        alt="link"></a>
+            </div>
+            <div class="link-img">
+                <a href="https://dir.indiamart.com/impcat/agricultural-sprayers.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=4&utm_term=agriculture&farming"
+                    class="link" data-link-index="6"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2023/9/345497043/NN/YW/IB/1943953/pw-768-a-neptune-power-sprayer-250x250.jpg"
+                        alt="link"></a>
+            </div>
+            <div class="link-img">
+                <a href="https://dir.indiamart.com/impcat/bedroom-furniture.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=7&utm_term=furniture&supplies"
+                    class="link" data-link-index="7"><img
+                        src="https://5.imimg.com/data5/ANDROID/Default/2022/6/PN/JJ/MU/149493044/product-jpeg-500x500.jpg"
+                        alt="link"></a>
+            </div>
         </div>
     </section>
+
 
     <script>
         const apiUrl = "https://backend-recent-2.onrender.com";
