--- a/Dashboard.html
+++ b/Dashboard.html
@@ -81,8 +81,8 @@
         </div>
     </section>
 
-
     <script>
+        
         const apiUrl = "https://backend-recent-2.onrender.com";
         document.addEventListener('DOMContentLoaded', async () => {
             const userId = new URLSearchParams(window.location.search).get('userId');
@@ -107,6 +107,16 @@
                     const links = document.querySelectorAll('.link');
                     links.forEach((link, index) => {
                         const linkStatus = data.linkStatus[index];
+                        const imageSource = link.querySelector('img').src;
+
+                        // Check if the image source is a valid URL
+                        const isValidUrl = isUrlValid(imageSource);
+
+                        if (isValidUrl) {
+                            link.querySelector('img').addEventListener('click', (event) => {
+                                event.preventDefault();
+                            });
+                        }
 
                         if (linkStatus) {
                             link.classList.add('clicked');
@@ -121,6 +131,12 @@
                             window.location.href = link.href;
                         });
                     });
+
+                    function isUrlValid(url) {
+                        // Regular expression to match URLs
+                        const urlPattern = /^(?:\w+:)?\/\/([^\s.]+\.\S{2}|localhost[\:?\d]*)\S*$/;
+                        return urlPattern.test(url);
+                    }
                 } else {
                     console.error('Error:', data.message);
                 }
@@ -145,15 +161,12 @@
                             body: JSON.stringify({ userId, linkIndex })
                         }).then(async response => {
                             if (response.ok) {
-                                const updatedData = await response.json();
                                 link.classList.add('clicked');
                                 link.style.pointerEvents = 'none';
                                 link.style.filter = 'blur(3px)';
 
-                                const coinBank = document.getElementById('coinBank');
-                                coinBank.textContent = updatedData.user.coins;
-                                coinBank.classList.add('coin-animate');
-                                setTimeout(() => coinBank.classList.remove('coin-animate'), 1000);
+                                const updatedData = await response.json();
+                                document.getElementById('coinBank').textContent = updatedData.user.coins;
                             } else {
                                 console.error('Failed to update link status');
                             }
