--- a/Dashboard.html
+++ b/Dashboard.html
@@ -81,7 +81,7 @@
         </div>
     </section>
 
-    <script>
+    <!-- <script>
         
         const apiUrl = "https://backend-recent-2.onrender.com";
         document.addEventListener('DOMContentLoaded', async () => {
@@ -177,7 +177,7 @@
                 }
             }
         });
-    </script>
+    </script> -->
 </body>
 
-</html>
+</html> 
