--- a/profile.html
+++ b/profile.html
@@ -19,8 +19,7 @@
             <a href="index.html" class="user-signOut">Sign out</a>
         </div>
         <div class="coin-info">
-            <span>Coin Bank: </span>
-            <span id="coinBank">0</span>
+            <span>HISTORY</span>
         </div>
     </nav>
 
