--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,9 @@
 
 <body>
     <nav id="nav-bar">
-        
+        <div class="welcome-msg">
+            <span id="username"></span>
+        </div>
         <div class="nav-items">
             <img class="user-profile" id="profilePic" src="user-profile.svg" alt="">
             <a href="index.html" class="user-signOut">Sign out</a>
