--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
 <body>
     <nav id="nav-bar">
         <div class="welcome-msg">
-            <span id="usernam"></span>
+            <span id="username"></span>
         </div>
         <div class="nav-items">
             <img class="user-profile" id="profilePic" src="user-profile.svg" alt="">
