--- a/profile.html
+++ b/profile.html
@@ -79,7 +79,11 @@
     </span>
 
     <script>
+
         const apiUrl = "https://backend-recent-2.onrender.com";
+        document.getElementById("logout").addEventListener("click",() => {
+            window.location.href = "index.html";
+        });
         document.addEventListener('DOMContentLoaded', async () => {
             const userId = new URLSearchParams(window.location.search).get('userId');
             if (!userId) {
