--- a/withdraw.html
+++ b/withdraw.html
@@ -10,214 +10,154 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: sans-serif;
         }
 
         body {
-            background-color: rgb(40, 111, 235);
+            font-family: Arial, sans-serif;
+            background-color: #f3f3f3;
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-top: 100px;
-        }
-
-        img {
-            height: 22px;
-            width: 22px;
-        }
-
-        .coin-photo {
-            margin: 0px 5px 0px 5px;
-
+            height: 100vh;
         }
 
         .withdraw-page {
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            max-width: 500px;
+            width: 90%;
+            animation: fadeIn 0.5s ease-in-out;
+        }
 
-            height: 60vh;
-            width: 60vw;
-            border: 2px solid goldenrod;
-            border-radius: 5px;
-            background-color: rgba(47, 159, 176, 0.637);
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-            align-items: center;
+        .withdraw-title {
+            font-size: 24px;
+            font-weight: bold;
+            color: #333;
+            margin-bottom: 20px;
+            text-align: center;
         }
 
         .withdraw-info {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
+            text-align: center;
+            margin-bottom: 20px;
+            animation: slideIn 0.5s ease-in-out;
         }
 
-        form {
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            flex-direction: column;
+        .withdraw-info .child-info {
+            font-size: 18px;
+            color: #666;
+            margin-bottom: 10px;
         }
 
-        .withdraw-page>span:first-of-type {
-            font-size: 40px;
-            font-weight: 700;
-            margin: 20px;
-            font-family: 'Times New Roman', Times, serif;
-            text-wrap: wrap;
-            color: gold;
-        }
-
-        .withdraw-info>.child-info:nth-child(1) {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 20px;
-            margin: 6px;
-        }
-
-        .withdraw-info>.child-info:nth-child(2) {
-            font-size: 15px;
-            margin: 6px;
-        }
-
-        .withdraw-info>.child-info:nth-child(3) {
-            font-size: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 6px;
-            padding: 1px;
-            border: 5px solid gold;
-            border-radius: 20px;
+        .withdraw-form {
+            text-align: center;
+            animation: slideIn 0.5s ease-in-out;
         }
 
         .withdraw-form label {
             font-size: 16px;
-            margin: 4px;
+            color: #333;
+            display: block;
+            margin-bottom: 5px;
         }
 
         .withdraw-form input {
-            height: 40px;
-            width: 220px;
-            border: 2px solid rgb(43, 41, 41);
-            border-radius: 3px;
-            color: black;
-            background-color: rgb(202, 242, 138);
-            font-size: 15px;
-            margin: 4px;
+            width: 100%;
+            padding: 12px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            margin-bottom: 15px;
+            transition: all 0.3s ease;
+        }
 
+        .withdraw-form input:focus {
+            border-color: #007bff;
+            box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
         }
 
         .withdraw {
-            border: 2px solid black;
-            background-color: rgb(178, 5, 5) !important;
-            color: white;
-            font-size: 30px;
-            font-weight: 700;
-            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            font-size: 18px;
+            border: none;
             border-radius: 5px;
+            padding: 15px 20px;
             cursor: pointer;
-
+            transition: background-color 0.3s ease;
         }
 
         .withdraw:hover {
-            background-color: rgb(62, 3, 3) !important;
-            color: white;
+            background-color: #0056b3;
+            animation: pulse 0.5s infinite alternate;
         }
 
-        input[type="number"]::-webkit-inner-spin-button,
-        input[type="number"]::-webkit-outer-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
-        }
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
 
-        @media (max-width: 1300px) {
-            .withdraw-page>span:first-of-type {
-                font-size: 30px;
-                font-weight: 700;
-                margin: 20px;
-                font-family: 'Times New Roman', Times, serif;
-                text-wrap: wrap;
-                text-align: center;
-
+            to {
+                opacity: 1;
             }
         }
 
-        @media (max-width: 1000px) {
-            .withdraw-page>span:first-of-type {
-                font-size: 25px;
-                font-weight: 700;
-                margin: 20px;
-                font-family: 'Times New Roman', Times, serif;
-                text-wrap: wrap;
-                text-align: center;
+        @keyframes slideIn {
+            from {
+                transform: translateY(-20px);
+                opacity: 0;
+            }
 
-
+            to {
+                transform: translateY(0);
+                opacity: 1;
             }
         }
 
-        @media (max-width: 500px) {
+        @keyframes pulse {
+            from {
+                transform: scale(1);
+            }
 
+            to {
+                transform: scale(1.05);
+            }
+        }
 
+        @media screen and (max-width: 600px) {
             .withdraw-page {
-
-                height: 75vh;
-                width: 80vw;
-                background-color: rgba(47, 159, 176, 0.637);
-
+                padding: 20px;
             }
 
-            body {
-                background-color: rgb(40, 111, 235);
-
-                margin-top: 70px;
-            }
-
-            .withdraw-page>span:first-of-type {
-                font-size: 25px;
-                font-weight: 700;
-                margin: 20px;
-                font-family: 'Times New Roman', Times, serif;
-                text-wrap: wrap;
-                text-align: center;
-
-
-            }
-
-            .withdraw-form label {
-                font-size: 13px;
-                margin: 4px;
-            }
-
-            #info {
-                font-weight: bold;
+            .withdraw-title {
                 font-size: 20px;
-                color: rgb(241, 10, 10);
+            }
+
+            .withdraw-info .child-info {
+                font-size: 16px;
             }
 
             .withdraw-form input {
-                height: 35px;
-                width: 200px;
-                border: 2px solid rgb(43, 41, 41);
-                border-radius: 3px;
-                color: black;
-                background-color: rgb(202, 242, 138);
-                font-size: 15px;
-                margin: 4px;
+                font-size: 14px;
+            }
 
+            .withdraw {
+                font-size: 16px;
+                padding: 12px 16px;
             }
         }
     </style>
+
 </head>
 
 <body>
     <div class="withdraw-page">
-        <span>Withdraw real cash to your Bank account</span>
+        <span class="withdraw-title">Withdraw real cash to your Bank account</span>
         <div class="withdraw-info">
             <span class="child-info">Use your <img class="coin-photo" src="coin.png" alt="">Super Coins</span>
             <span class="child-info"> & get real cash</span>
             <span class="child-info"><img class="coin-photo" src="coin.png" alt="">10=₹1</span>
-
         </div>
         <div>
             <form class="withdraw-form" id="withDrawReq">
@@ -225,12 +165,10 @@
                 <input type="number" id="withdrawn-coin" placeholder="Enter Coins" required>
                 <label for="upi-id">UPI ID:</label>
                 <input type="text" id="upi-id" name="upi-id" required placeholder="Please enter a valid UPI ID">
-
                 <label for="check-password">PASSWORD :</label>
                 <input type="password" id="check-password" placeholder="Enter Your Password" required>
                 <div id="info"></div>
                 <input class="withdraw" type="submit" value="Withdraw">
-
             </form>
         </div>
     </div>
