--- a/withdraw.html
+++ b/withdraw.html
@@ -10,141 +10,133 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            font-family: sans-serif;
         }
 
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f3f3f3;
+            background-color: rgb(40, 111, 235);
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            margin-top: 100px;
         }
 
         .withdraw-page {
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 30px;
-            max-width: 500px;
-            width: 90%;
-            animation: fadeIn 0.5s ease-in-out;
+            height: 60vh;
+            width: 60vw;
+            border: 2px solid goldenrod;
+            border-radius: 5px;
+            background-color: rgba(47, 159, 176, 0.637);
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
         }
 
         .withdraw-title {
-            font-size: 24px;
-            font-weight: bold;
-            color: #333;
-            margin-bottom: 20px;
-            text-align: center;
+            font-size: 30px;
+            font-weight: 700;
+            margin: 20px;
+            font-family: 'Times New Roman', Times, serif;
+            color: gold;
         }
 
         .withdraw-info {
-            text-align: center;
-            margin-bottom: 20px;
-            animation: slideIn 0.5s ease-in-out;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
         }
 
         .withdraw-info .child-info {
-            font-size: 18px;
-            color: #666;
-            margin-bottom: 10px;
+            font-size: 20px;
+            margin: 6px;
         }
 
         .withdraw-form {
-            text-align: center;
-            animation: slideIn 0.5s ease-in-out;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            flex-direction: column;
+            margin-top: 20px;
         }
 
         .withdraw-form label {
             font-size: 16px;
-            color: #333;
-            display: block;
-            margin-bottom: 5px;
+            margin: 4px;
+            color: black;
         }
 
         .withdraw-form input {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            margin-bottom: 15px;
+            height: 40px;
+            width: 220px;
+            border: 2px solid rgb(43, 41, 41);
+            border-radius: 3px;
+            color: black;
+            background-color: rgb(202, 242, 138);
+            font-size: 15px;
+            margin: 4px;
+            padding: 5px;
             transition: all 0.3s ease;
         }
 
         .withdraw-form input:focus {
-            border-color: #007bff;
-            box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+            border-color: gold;
+            box-shadow: 0 0 5px gold;
         }
 
         .withdraw {
-            background-color: #007bff;
-            color: #fff;
-            font-size: 18px;
-            border: none;
+            border: 2px solid black;
+            background-color: rgb(178, 5, 5);
+            color: white;
+            font-size: 30px;
+            font-weight: 700;
+            padding: 10px 20px;
             border-radius: 5px;
-            padding: 15px 20px;
             cursor: pointer;
-            transition: background-color 0.3s ease;
+            transition: all 0.3s ease;
         }
 
         .withdraw:hover {
-            background-color: #0056b3;
-            animation: pulse 0.5s infinite alternate;
+            background-color: rgb(62, 3, 3);
         }
 
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-
-            to {
-                opacity: 1;
-            }
+        input[type="number"]::-webkit-inner-spin-button,
+        input[type="number"]::-webkit-outer-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
         }
 
-        @keyframes slideIn {
-            from {
-                transform: translateY(-20px);
-                opacity: 0;
-            }
-
-            to {
-                transform: translateY(0);
-                opacity: 1;
+        @media (max-width: 1300px) {
+            .withdraw-title {
+                font-size: 25px;
             }
         }
 
-        @keyframes pulse {
-            from {
-                transform: scale(1);
-            }
-
-            to {
-                transform: scale(1.05);
-            }
-        }
-
-        @media screen and (max-width: 600px) {
-            .withdraw-page {
-                padding: 20px;
-            }
-
+        @media (max-width: 1000px) {
             .withdraw-title {
                 font-size: 20px;
             }
+        }
 
-            .withdraw-info .child-info {
-                font-size: 16px;
+        @media (max-width: 500px) {
+            .withdraw-page {
+                height: 75vh;
+                width: 80vw;
+            }
+
+            .withdraw-title {
+                font-size: 25px;
+            }
+
+            .withdraw-info .child-info,
+            .withdraw-form label {
+                font-size: 13px;
             }
 
             .withdraw-form input {
-                font-size: 14px;
-            }
-
-            .withdraw {
-                font-size: 16px;
-                padding: 12px 16px;
+                height: 35px;
+                width: 200px;
             }
         }
     </style>
