--- a/withdraw.html
+++ b/withdraw.html
@@ -21,7 +21,18 @@
             margin-top: 100px;
         }
 
+        img {
+            height: 22px;
+            width: 22px;
+        }
+
+        .coin-photo {
+            margin: 0px 5px 0px 5px;
+
+        }
+
         .withdraw-page {
+
             height: 60vh;
             width: 60vw;
             border: 2px solid goldenrod;
@@ -33,14 +44,6 @@
             align-items: center;
         }
 
-        .withdraw-title {
-            font-size: 30px;
-            font-weight: 700;
-            margin: 20px;
-            font-family: 'Times New Roman', Times, serif;
-            color: gold;
-        }
-
         .withdraw-info {
             display: flex;
             justify-content: center;
@@ -48,23 +51,49 @@
             flex-direction: column;
         }
 
-        .withdraw-info .child-info {
-            font-size: 20px;
-            margin: 6px;
-        }
-
-        .withdraw-form {
+        form {
             display: flex;
             justify-content: center;
             align-items: flex-start;
             flex-direction: column;
-            margin-top: 20px;
+        }
+
+        .withdraw-page>span:first-of-type {
+            font-size: 40px;
+            font-weight: 700;
+            margin: 20px;
+            font-family: 'Times New Roman', Times, serif;
+            text-wrap: wrap;
+            color: gold;
+        }
+
+        .withdraw-info>.child-info:nth-child(1) {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 20px;
+            margin: 6px;
+        }
+
+        .withdraw-info>.child-info:nth-child(2) {
+            font-size: 15px;
+            margin: 6px;
+        }
+
+        .withdraw-info>.child-info:nth-child(3) {
+            font-size: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 6px;
+            padding: 1px;
+            border: 5px solid gold;
+            border-radius: 20px;
         }
 
         .withdraw-form label {
             font-size: 16px;
             margin: 4px;
-            color: black;
         }
 
         .withdraw-form input {
@@ -76,29 +105,24 @@
             background-color: rgb(202, 242, 138);
             font-size: 15px;
             margin: 4px;
-            padding: 5px;
-            transition: all 0.3s ease;
-        }
 
-        .withdraw-form input:focus {
-            border-color: gold;
-            box-shadow: 0 0 5px gold;
         }
 
         .withdraw {
             border: 2px solid black;
-            background-color: rgb(178, 5, 5);
+            background-color: rgb(178, 5, 5) !important;
             color: white;
             font-size: 30px;
             font-weight: 700;
             padding: 10px 20px;
             border-radius: 5px;
             cursor: pointer;
-            transition: all 0.3s ease;
+
         }
 
         .withdraw:hover {
-            background-color: rgb(62, 3, 3);
+            background-color: rgb(62, 3, 3) !important;
+            color: white;
         }
 
         input[type="number"]::-webkit-inner-spin-button,
@@ -108,48 +132,92 @@
         }
 
         @media (max-width: 1300px) {
-            .withdraw-title {
-                font-size: 25px;
+            .withdraw-page>span:first-of-type {
+                font-size: 30px;
+                font-weight: 700;
+                margin: 20px;
+                font-family: 'Times New Roman', Times, serif;
+                text-wrap: wrap;
+                text-align: center;
+
             }
         }
 
         @media (max-width: 1000px) {
-            .withdraw-title {
-                font-size: 20px;
+            .withdraw-page>span:first-of-type {
+                font-size: 25px;
+                font-weight: 700;
+                margin: 20px;
+                font-family: 'Times New Roman', Times, serif;
+                text-wrap: wrap;
+                text-align: center;
+
+
             }
         }
 
         @media (max-width: 500px) {
+
+
             .withdraw-page {
+
                 height: 75vh;
                 width: 80vw;
+                background-color: rgba(47, 159, 176, 0.637);
+
             }
 
-            .withdraw-title {
+            body {
+                background-color: rgb(40, 111, 235);
+
+                margin-top: 70px;
+            }
+
+            .withdraw-page>span:first-of-type {
                 font-size: 25px;
+                font-weight: 700;
+                margin: 20px;
+                font-family: 'Times New Roman', Times, serif;
+                text-wrap: wrap;
+                text-align: center;
+
+
             }
 
-            .withdraw-info .child-info,
             .withdraw-form label {
                 font-size: 13px;
+                margin: 4px;
+            }
+
+            #info {
+                font-weight: bold;
+                font-size: 20px;
+                color: rgb(241, 10, 10);
             }
 
             .withdraw-form input {
                 height: 35px;
                 width: 200px;
+                border: 2px solid rgb(43, 41, 41);
+                border-radius: 3px;
+                color: black;
+                background-color: rgb(202, 242, 138);
+                font-size: 15px;
+                margin: 4px;
+
             }
         }
     </style>
-
 </head>
 
 <body>
     <div class="withdraw-page">
-        <span class="withdraw-title">Withdraw real cash to your Bank account</span>
+        <span>Withdraw real cash to your Bank account</span>
         <div class="withdraw-info">
             <span class="child-info">Use your <img class="coin-photo" src="coin.png" alt="">Super Coins</span>
             <span class="child-info"> & get real cash</span>
             <span class="child-info"><img class="coin-photo" src="coin.png" alt="">10=₹1</span>
+
         </div>
         <div>
             <form class="withdraw-form" id="withDrawReq">
@@ -157,10 +225,12 @@
                 <input type="number" id="withdrawn-coin" placeholder="Enter Coins" required>
                 <label for="upi-id">UPI ID:</label>
                 <input type="text" id="upi-id" name="upi-id" required placeholder="Please enter a valid UPI ID">
+
                 <label for="check-password">PASSWORD :</label>
                 <input type="password" id="check-password" placeholder="Enter Your Password" required>
                 <div id="info"></div>
                 <input class="withdraw" type="submit" value="Withdraw">
+
             </form>
         </div>
     </div>
