--- a/Dashboard.html
+++ b/Dashboard.html
@@ -19,7 +19,7 @@
             
         </div>
         <div class="coin-info">
-            <span>Coin Bank : </span>
+            <img class="coin-photos" src="coin.png" alt="">
             <span id="coinBank">0</span>
         </div>
     </nav>
