--- a/withdraw.html
+++ b/withdraw.html
@@ -207,6 +207,11 @@
 
             }
         }
+
+        #coinNo{
+            color: gold;
+            font-weight: bold;
+        }
     </style>
 </head>
 
@@ -214,7 +219,7 @@
     <div class="withdraw-page">
         <span>Withdraw real cash to your Bank account</span>
         <div class="withdraw-info">
-            <span class="child-info">Use your <img class="coin-photo" src="coin.png" alt="">Super Coins</span>
+            <span class="child-info">Use your <img class="coin-photo" src="coin.png" alt=""><span> = </span> <span id="coinNo"></span> Coins</span>
             <span class="child-info"> & get real cash</span>
             <span class="child-info"><img class="coin-photo" src="coin.png" alt="">10=₹1</span>
 
