--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
             <button id="close">&times;</button>
             <h2>This Is A Information</h2>
             <p>
-                Unlock a world of possibilities! Get started today by signing up on our website. Join our community,
-                access exclusive features, and enjoy a seamless experience. Register now to begin your journey with us.
+                thanks For Visiting Our Website. This Platform makes You RICH Day by Day . So Join This FREE platform & make MONEY
             </p>
-            <a href="/register.html">Let's Go</a>
-            <a id="closeClick" href="#">Click to Close</a>
+            <a href="/register.html" class="regis">REGISTER</a>
+            <a id="closeClick" href="#" class="closis">Click to Close</a>
         </div>
         <nav class="nav">
             <div class="nav-logo">
@@ -36,7 +35,6 @@
             </div>
             <div class="nav-button">
                 <button class="btn white-btn" id="loginBtn" onclick="login()"><a href="/login.html">Sign In</a></button>
-                <button class="btn" id="registerBtn" onclick="register()"><a href="/register.html">Sign Up</a></button>
             </div>
             <div class="nav-menu-btn">
                 <i class="bx bx-menu" id="hamburger" onclick="toggleMenu()">☰</i>
