--- a/register.html
+++ b/register.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Registration</title>
-    <link rel="stylesheet" href="resister.css">
+    <link rel="stylesheet" href="register.css">
+    <style>
+       
+    </style>
 </head>
 <body>
-    <div class="container" id="container">
+    <div class="container">
         <h2>User Registration</h2>
         <form id="registrationForm">
             <input type="text" id="name" placeholder="Name" required>
@@ -19,17 +22,14 @@
         </form>
         <p id="message"></p>
 
-        <!-- Loading Spinner and Blur Effect -->
-        <div id="loadingSpinner" class="spinner">
-            <svg viewBox="0 0 50 50">
-                <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
-            </svg>
+        <!-- Loading Spinner -->
+        <div id="loadingSpinner" class="spinner-overlay">
+            <div class="spinner"></div>
         </div>
-        <div id="blurOverlay" class="blur-overlay"></div>
 
         <!-- Sign In button -->
         <p>Already have an account? <a href="login.html">Log In</a></p>
     </div>
-    <script src="reg.js"></script>
+    <script src="register.js"></script>
 </body>
 </html>
