--- a/Dashboard.html
+++ b/Dashboard.html
@@ -119,16 +119,22 @@
                         link.addEventListener('click', async (event) => {
                             event.preventDefault();
 
+                            const stayTime = 5000; // 5 seconds
+
+                            const redirectTimeout = setTimeout(() => {
+                                // If the user returns before 5 seconds, show alert
+                                alert("You did not stay at least 5 seconds on the clicked link page. You won't receive any coins.");
+                            }, stayTime);
+
                             // Start timer to check if user stays on the page for 5 seconds
                             const startTime = Date.now();
 
                             const handleVisibilityChange = () => {
+                                clearTimeout(redirectTimeout);
                                 if (document.visibilityState === 'visible') {
                                     const elapsedTime = Date.now() - startTime;
-                                    if (elapsedTime >= 5000) {
+                                    if (elapsedTime >= stayTime) {
                                         updateCoinAndLinkState(index);
-                                    } else {
-                                        alert("You did not stay at least 5 seconds on the clicked link page. You won't receive any coins.");
                                     }
                                     document.removeEventListener('visibilitychange', handleVisibilityChange);
                                 }
@@ -148,6 +154,7 @@
 
         async function updateCoinAndLinkState(index) {
             try {
+                const userId = new URLSearchParams(window.location.search).get('userId');
                 const updateResponse = await fetch(`${apiUrl}/update-link`, {
                     method: 'POST',
                     headers: {
@@ -178,6 +185,7 @@
                 console.error('Error updating link status:', error);
             }
         }
+
 
     </script>
 
